Updates to latest versions where possible

--- a/package.json
+++ b/package.json
@@ -65,10 +65,11 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.2",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^15.0.1",
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "^10.2.5",
@@ -76,7 +77,6 @@
     "babel-jest": "^26.6.3",
     "babel-plugin-i18next-extract": "^0.8.3",
     "chai": "^4.3.4",
-    "docz": "^2.3.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
@@ -102,9 +102,9 @@
     "mocha": "^8.3.2",
     "postcss": "^8.2.13",
     "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-test-renderer": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-test-renderer": "^18.0.0",
     "rollup": "^2.56.3",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -119,21 +119,21 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@types/emoji-mart": "^3.0.4",
+    "@types/emoji-mart": "^3.0.14",
     "@types/linkifyjs": "^2.1.3",
     "@types/url-parse": "^1.4.3",
-    "@types/webscopeio__react-textarea-autocomplete": "^4.7.0",
-    "@webscopeio/react-textarea-autocomplete": "^4.8.1",
+    "@types/webscopeio__react-textarea-autocomplete": "^4.7.5",
+    "@webscopeio/react-textarea-autocomplete": "^4.9.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
-    "emoji-mart": "^3.0.1",
+    "emoji-mart": "^5.5.2",
     "getstream": "^7.2.11",
     "i18next": "^20.2.2",
     "immutable": "^4.0.0-rc.12",
     "linkifyjs": "^2.1.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "react-file-utils": "^1.1.7",
+    "react-file-utils": "^1.2.0",
     "react-image-lightbox": "^5.1.1",
     "stream-analytics": "^3.4.2",
     "tslib": "^2.3.1",
