--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "lint-fix": "yarn run prettier-fix && yarn run eslint --fix && stylelint --fix '**/*.{css,scss}'",
     "stylelint": "stylelint '**/*.{css,scss}'",
     "types": "tsc",
-    "build": "yarn run types && rollup -c",
-    "start": "yarn run types && rollup -c -w",
+    "build": "rollup -c --bundleConfigAsCjs",
+    "start": "rollup -c -w",
     "docs": "docz dev",
     "docs-build": "docz build",
     "noop": "echo ''",
@@ -41,8 +41,7 @@
     "analyze": "size-limit --why",
     "prepare": "yarn run build && husky install",
     "preversion": "yarn install && yarn lint && yarn test",
-    "version": "yarn docs-build && git add -A docs",
-    "postversion": "git push && git push --tags && npm publish"
+    "version": "yarn docs-build && git add -A docs"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^17.0.0 || ^16.8.0",
@@ -57,10 +56,6 @@
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
     "@size-limit/preset-big-lib": "^4.10.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -105,7 +100,6 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-test-renderer": "^18.0.0",
-    "rollup": "^2.56.3",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.1",
@@ -119,14 +113,18 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.14.0",
-    "@types/emoji-mart": "^3.0.14",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/emoji-mart": "^3.0.1",
     "@types/linkifyjs": "^2.1.3",
     "@types/url-parse": "^1.4.3",
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.5",
     "@webscopeio/react-textarea-autocomplete": "^4.9.2",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
-    "emoji-mart": "^5.5.2",
+    "emoji-mart": "^3.0.1",
     "getstream": "^7.2.11",
     "i18next": "^20.2.2",
     "immutable": "^4.0.0-rc.12",
@@ -135,6 +133,7 @@
     "moment": "^2.29.1",
     "react-file-utils": "^1.2.0",
     "react-image-lightbox": "^5.1.1",
+    "rollup": "^4.9.6",
     "stream-analytics": "^3.4.2",
     "tslib": "^2.3.1",
     "url-parse": "^1.5.1",
